--- a/searcheng.html
+++ b/searcheng.html
@@ -15,7 +15,7 @@
     <input type="text" id="search" class="form-control" placeholder="search">
   </div>
   <div class="form-group">
-    <button class="btn btn-danger btn-block">Search</button>
+    <button class="btn btn-secondary btn-block">Search</button>
   </div>
   </form>
   <div id="result">
