--- a/YoutubeLink.html
+++ b/YoutubeLink.html
@@ -26,7 +26,7 @@
           />
         </div>
         <div class="form-group">
-          <button class="btn btn-danger btn-block">
+          <button class="btn btn-secondary btn-block">
             Search
           </button>
         </div>
